// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.admin.participant.v30;

import "google/protobuf/timestamp.proto";

// Supports transferring contracts from one domain to another
service TransferService {

  // return the in-flight transfers on a given participant for a given target domain
  rpc TransferSearch(AdminTransferSearchQuery) returns (AdminTransferSearchResponse);
}

message TransferId {
  string source_domain = 1;
  google.protobuf.Timestamp timestamp = 2;
}

message AdminTransferSearchQuery {
  string search_domain = 1;
  string filter_origin_domain = 2; // exact match if non-empty
  google.protobuf.Timestamp filter_timestamp = 3; // optional; exact match if set
  string filter_submitting_party = 4;
  int64 limit = 5;
}

message AdminTransferSearchResponse {
  repeated TransferSearchResult results = 1;

  message TransferSearchResult {
    string contract_id = 1;
    TransferId transfer_id = 2;
    string origin_domain = 3;
    string target_domain = 4;
    string submitting_party = 5;
    bool ready_for_transfer_in = 6;
    google.protobuf.Timestamp target_time_proof = 7;
  }
}
